--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>CS+Social Good</h2>
+							<p>Exploring the intersection of computer science and social impact</p>
 						</div>
 					</section>
 
