Even more optimizations

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img id="white-logo" width="auto" height="30" alt="White version of CS+Social Good logo">
-            <img id="dark-logo" width="auto" height="30" alt="Color version of CS+Social Good logo" style="display:none">
+            <img id="white-logo" src="<%=require('./images/logo_whitescale.png')%>" width="auto" height="30" alt="White version of CS+Social Good logo">
+            <img id="dark-logo" src="<%=require('./images/logo.png')%>" width="auto" height="30" alt="Color version of CS+Social Good logo" style="display:none">
         </a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#probootstrap-navbar" aria-controls="probootstrap-navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span><i class="ion-navicon"></i></span>
@@ -264,7 +264,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"><br/>President</h4>
-              <img class="img-fluid rounded-circle" id="pres-pic" alt="Photograph of Matthew Sun">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/matt.jpg')%>" alt="Photograph of Matthew Sun">
               <p class="pb_font-15 mt-3 mb-0">Matthew Sun</p>
               <p class="pb_font-15"><a href="mailto:mattsun@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="http://linkedin.com/in/matthewds" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -272,7 +272,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Vice President</h4>
-              <img class="img-fluid rounded-circle" id="vp-pic" alt="Photograph of Belce Dogru">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/belce.jpg')%>" alt="Photograph of Belce Dogru">
               <p class="pb_font-15 mt-3 mb-0">Belce Dogru</p>
               <p class="pb_font-15"><a href="mailto:belce@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/belcedogru/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -280,7 +280,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">FO,<br/>106S</h4>
-              <img class="img-fluid rounded-circle" id="fo-pic" alt="Photograph of Andrea Dahl">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/andrea.jpg')%>" alt="Photograph of Andrea Dahl">
               <p class="pb_font-15 mt-3 mb-0">Andrea Dahl</p>
               <p class="pb_font-15"><a href="mailto:ahdahl@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andrea-dahl-b0083b151/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -288,7 +288,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Design &amp; Marketing</h4>
-              <img class="img-fluid rounded-circle" id="dm-pic" alt="Photograph of JR Cabansag">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/jr.jpg')%>" alt="Photograph of JR Cabansag">
               <p class="pb_font-15 mt-3 mb-0">JR Cabansag</p>
               <p class="pb_font-15"><a href="mailto:cabansag@stanford.edu"><i class="fa fa-envelope"></i></a></p>
             </div>
@@ -298,7 +298,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Community</h4>
-              <img class="img-fluid rounded-circle" id="internity1-pic" alt="Photograph of Nichelle Hall">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/nichelle.jpg')%>" alt="Photograph of Nichelle Hall">
               <p class="pb_font-15 mt-3 mb-0">Nichelle Hall</p>
               <p class="pb_font-15"><a href="mailto:nhall2@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/nichelleahall/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -306,7 +306,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Community</h4>
-              <img class="img-fluid rounded-circle" id="internity2-pic" alt="Photograph of Julie Fukunaga">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/julie.jpg')%>" alt="Photograph of Julie Fukunaga">
               <p class="pb_font-15 mt-3 mb-0">Julie Fukunaga</p>
               <p class="pb_font-15"><a href="mailto:juliefa@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/julie-fukunaga-125039127/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -314,7 +314,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Community</h4>
-              <img class="img-fluid rounded-circle" id="internity3-pic" alt="Photograph of Peter Kwak">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/peter.jpg')%>" alt="Photograph of Peter Kwak">
               <p class="pb_font-15 mt-3 mb-0">Peter Kwak</p>
               <p class="pb_font-15"><a href="mailto:peterk11@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/peterkwak/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -322,7 +322,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Fellowships</h4>
-              <img class="img-fluid rounded-circle" id="fellowships-pic" alt="Photograph of Ryan Cohen">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/ryan.jpg')%>" alt="Photograph of Ryan Cohen">
               <p class="pb_font-15 mt-3 mb-0">Ryan Cohen</p>
               <p class="pb_font-15"><a href="mailto:rrcohen@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ryanrcohen/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -332,7 +332,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"><br/>Studio</h4>
-              <img class="img-fluid rounded-circle" id="studio1-pic" alt="Photograph of Jack Gartland">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/jack.jpg')%>" alt="Photograph of Jack Gartland">
               <p class="pb_font-15 mt-3 mb-0">Jack Gartland</p>
               <p class="pb_font-15"><a href="mailto:gartland@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jack-gartland/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -340,7 +340,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"><br/>Studio</h4>
-              <img class="img-fluid rounded-circle" id="studio2-pic" alt="Photograph of Vik Pattabi">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/vik.jpg')%>" alt="Photograph of Vik Pattabi">
               <p class="pb_font-15 mt-3 mb-0">Vik Pattabi</p>
               <p class="pb_font-15"><a href="mailto:vpattabi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/vik-pattabi-346b39165/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -348,7 +348,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"><br/>Discussions</h4>
-              <img class="img-fluid rounded-circle" id="discussions-pic" alt="Photograph of Cherry Zou">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/cherry.jpg')%>" alt="Photograph of Cherry Zou">
               <p class="pb_font-15 mt-3 mb-0">Cherry Zou</p>
               <p class="pb_font-15"><a href="mailto:cherryz@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/cherryzou/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -356,7 +356,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education Outreach</h4>
-              <img class="img-fluid rounded-circle" id="edoutreach1-pic" alt="Photograph of Sara Frigui">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/sara.jpg')%>" alt="Photograph of Sara Frigui">
               <p class="pb_font-15 mt-3 mb-0">Sara Frigui</p>
               <p class="pb_font-15"><a href="mailto:sfrig01@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sara-frigui-840193152/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -366,7 +366,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education Outreach</h4>
-              <img class="img-fluid rounded-circle" id="edoutreach2-pic" alt="Photograph of Gunguk Kim">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/gunguk.jpg')%>" alt="Photograph of Gunguk Kim">
               <p class="pb_font-15 mt-3 mb-0">Gunguk Kim</p>
               <p class="pb_font-15"><a href="mailto:gunguk@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/gunguk-kim/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -374,7 +374,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
-              <img class="img-fluid rounded-circle" id="aisg-pic" alt="Photograph of Karan Singhal">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/karan.jpg')%>" alt="Photograph of Karan Singhal">
               <p class="pb_font-15 mt-3 mb-0">Karan Singhal</p>
               <p class="pb_font-15"><a href="mailto:ksinghal@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/trafficke/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -481,7 +481,7 @@
               </div>
               <input type="hidden" name="_gotcha">
               <div class="form-group">
-                <input type="submit" class="btn btn-cssg-meadow btn-lg btn-block pb_btn-pill btn-shadow-meadow" value="Register">
+                <input type="submit" class="btn btn-cssg-meadow btn-lg btn-block pb_btn-pill btn-shadow-meadow" value="Send Message">
               </div>
             </form>
           </div>
