--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="A student organization at Stanford dedicated to the intersection of technology and social impact.">
 		<meta name="keywords" content="CS4Good, technology, justice, social impact, CS+Social Good, computer science, society">
     
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Work+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400|Work+Sans:300,400" rel="stylesheet">
 	</head>
 	<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
     <!-- loader -->
@@ -239,7 +239,8 @@
           <div class="col-md">
             <div class="media d-block text-center testimonial_v1 pb_quote_v2">
               <div class="media-body">
-                <div class="quote">&ldquo;</div>
+                <div class="quote-left">&ldquo;</div>
+                <div class="quote-right">&rdquo;</div>
                 <blockquote class="mb-5">Last spring, I was debating between the CS+Social Good Fellowship and a big tech company program. I have absolutely no regrets about taking the fellowship: I got to see the direct impact of my work and I got to know a group of incredible, inspiring people.</blockquote>
                 <h3 class="heading">Claire Huang</h3>
                 <span class="subheading">2017 CS+Social Good Summer Fellow</span>
@@ -374,9 +375,9 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/karan.jpg')%>" alt="Photograph of Karan Singhal">
-              <p class="pb_font-15 mt-3 mb-0">Karan Singhal</p>
-              <p class="pb_font-15"><a href="mailto:ksinghal@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/trafficke/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/shubhang.jpg')%>" alt="Photograph of Shubhang Desai">
+              <p class="pb_font-15 mt-3 mb-0">Shubhang Desai</p>
+              <p class="pb_font-15"><a href="mailto:shubhang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
         </div>
@@ -505,7 +506,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <p class="pb_font-14">&copy; 2018 CS+Social Good. <br/> Designed &amp; Developed by <a href="https://uicookies.com/">uicookies.com</a> (<a href="https://uicookies.com/license/" target="_blank">License</a>)</p>
+            <p class="pb_font-14">&copy; 2018 CS+Social Good.</p>
           </div>
         </div>
       </div>
