Cleaning things up

--- a/src/index.html
+++ b/src/index.html
@@ -372,14 +372,14 @@
               <p class="pb_font-15"><a href="mailto:gunguk@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/gunguk-kim/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/shubhang.jpg')%>" alt="Photograph of Shubhang Desai">
               <p class="pb_font-15 mt-3 mb-0">Shubhang Desai</p>
               <p class="pb_font-15"><a href="mailto:shubhang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
