Added information about TechShift

--- a/src/index.html
+++ b/src/index.html
@@ -439,6 +439,7 @@
                   <div class="py-3">
                       <p>You don't have to be at Stanford to engage with CS+Social Good! We maintain an <a href="https://www.facebook.com/groups/cs4good/" target="_blank">active Facebook group</a> of over 2,000 members from all across the world.</p>
                       <p>In addition, anyone can sign up for our weekly newsletter via <a href="https://mailman.stanford.edu/mailman/listinfo/cs-for-social-good" target="_blank">Stanford Mailman</a>. Though most of the content is targeted towards Stanford students, we also feature readings and opportunities for the wider community.</p>
+                      <p>If you'd like to start an organization like CS+Social Good at your own school, check out <a href="https://techshift.co/" target="_blank">TechShift</a>, a national alliance of tech for good organizations on college campuses! We're a proud TechShift member org, and they can help you with resources and mentorship to start your own tech for good organization.</p>
                   </div>
                 </div>
               </div>
