--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <h2 class="heading mb-3">Stanford CS+Social Good</h2>
             <div class="sub-heading">
-              <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms. <a href="http://bit.ly/cssg2018" target="_blank" id="apply-link">Apply to join our team today!</a></p>
+              <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms. <!--<a href="http://bit.ly/cssg2018" target="_blank" id="apply-link">Apply to join our team today!</a>--></p>
               <p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://www.facebook.com/cs4good/" target="_blank"><i class="fa fa-facebook"></i></span></a>
@@ -340,6 +340,22 @@
         </div>
         <div class="row">
           <div class="col-sm-6 col-md-3">
+              <div class="pb_pricing_v1 p-5 border text-center bg-white">
+                <h4 class="mb-3"><br/>Fellowships</h4>
+                <img class="img-fluid rounded-circle" src="<%=require('./images/ethan.jpg')%>" alt="Photograph of Ethan Oro">
+                <p class="pb_font-15 mt-3 mb-0">Ethan Oro</p>
+                <p class="pb_font-15"><a href="mailto:eoro@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ethan-oro" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <div class="pb_pricing_v1 p-5 border text-center bg-white">
+                <h4 class="mb-3"><br/>Fellowships</h4>
+                <img class="img-fluid rounded-circle" src="<%=require('./images/kim.jpg')%>" alt="Photograph of Kim Ngo">
+                <p class="pb_font-15 mt-3 mb-0">Kim Ngo</p>
+                <p class="pb_font-15"><a href="mailto:kimanh@stanford.edu"><i class="fa fa-envelope"></i></a></p>
+              </div>
+            </div>
+          <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"><br/>Studio</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/jack.jpg')%>" alt="Photograph of Jack Gartland">
@@ -355,24 +371,24 @@
               <p class="pb_font-15"><a href="mailto:vpattabi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/vik-pattabi-346b39165/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"><br/>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/cherry.jpg')%>" alt="Photograph of Cherry Zou">
-              <p class="pb_font-15 mt-3 mb-0">Cherry Zou</p>
-              <p class="pb_font-15"><a href="mailto:cherryz@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/cherryzou/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3">Education Outreach</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/sara.jpg')%>" alt="Photograph of Sara Frigui">
-              <p class="pb_font-15 mt-3 mb-0">Sara Frigui</p>
-              <p class="pb_font-15"><a href="mailto:sfrig01@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sara-frigui-840193152/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
         </div>
         <div class="row">
+          <div class="col-sm-6 col-md-3">
+              <div class="pb_pricing_v1 p-5 border text-center bg-white">
+                <h4 class="mb-3"><br/>Discussions</h4>
+                <img class="img-fluid rounded-circle" src="<%=require('./images/cherry.jpg')%>" alt="Photograph of Cherry Zou">
+                <p class="pb_font-15 mt-3 mb-0">Cherry Zou</p>
+                <p class="pb_font-15"><a href="mailto:cherryz@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/cherryzou/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <div class="pb_pricing_v1 p-5 border text-center bg-white">
+                <h4 class="mb-3">Education Outreach</h4>
+                <img class="img-fluid rounded-circle" src="<%=require('./images/sara.jpg')%>" alt="Photograph of Sara Frigui">
+                <p class="pb_font-15 mt-3 mb-0">Sara Frigui</p>
+                <p class="pb_font-15"><a href="mailto:sfrig01@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sara-frigui-840193152/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              </div>
+            </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education Outreach</h4>
