--- a/src/index.html
+++ b/src/index.html
@@ -323,41 +323,33 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3">Community</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/peter.jpg')%>" alt="Photograph of Peter Kwak">
-              <p class="pb_font-15 mt-3 mb-0">Peter Kwak</p>
-              <p class="pb_font-15"><a href="mailto:peterk11@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/peterkwak/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Fellowships</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/ryan.jpg')%>" alt="Photograph of Ryan Cohen">
               <p class="pb_font-15 mt-3 mb-0">Ryan Cohen</p>
               <p class="pb_font-15"><a href="mailto:rrcohen@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ryanrcohen/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Fellowships</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/ethan.jpg')%>" alt="Photograph of Ethan Oro">
+              <p class="pb_font-15 mt-3 mb-0">Ethan Oro</p>
+              <p class="pb_font-15"><a href="mailto:eoro@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ethan-oro" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
         </div>
         <div class="row">
           <div class="col-sm-6 col-md-3">
-              <div class="pb_pricing_v1 p-5 border text-center bg-white">
-                <h4 class="mb-3"><br/>Fellowships</h4>
-                <img class="img-fluid rounded-circle" src="<%=require('./images/ethan.jpg')%>" alt="Photograph of Ethan Oro">
-                <p class="pb_font-15 mt-3 mb-0">Ethan Oro</p>
-                <p class="pb_font-15"><a href="mailto:eoro@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ethan-oro" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-              </div>
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Fellowships</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/kim.jpg')%>" alt="Photograph of Kim Ngo">
+              <p class="pb_font-15 mt-3 mb-0">Kim Ngo</p>
+              <p class="pb_font-15"><a href="mailto:kimanh@stanford.edu"><i class="fa fa-envelope"></i></a></p>
             </div>
-            <div class="col-sm-6 col-md-3">
-              <div class="pb_pricing_v1 p-5 border text-center bg-white">
-                <h4 class="mb-3"><br/>Fellowships</h4>
-                <img class="img-fluid rounded-circle" src="<%=require('./images/kim.jpg')%>" alt="Photograph of Kim Ngo">
-                <p class="pb_font-15 mt-3 mb-0">Kim Ngo</p>
-                <p class="pb_font-15"><a href="mailto:kimanh@stanford.edu"><i class="fa fa-envelope"></i></a></p>
-              </div>
-            </div>
+          </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"><br/>Studio</h4>
+              <h4 class="mb-3">Studio</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/jack.jpg')%>" alt="Photograph of Jack Gartland">
               <p class="pb_font-15 mt-3 mb-0">Jack Gartland</p>
               <p class="pb_font-15"><a href="mailto:gartland@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jack-gartland/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -365,30 +357,30 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"><br/>Studio</h4>
+              <h4 class="mb-3">Studio</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/vik.jpg')%>" alt="Photograph of Vik Pattabi">
               <p class="pb_font-15 mt-3 mb-0">Vik Pattabi</p>
               <p class="pb_font-15"><a href="mailto:vpattabi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/vik-pattabi-346b39165/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Discussions</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/brooke.jpg')%>" alt="Photograph of Brooke Teferra">
+              <p class="pb_font-15 mt-3 mb-0">Brooke Teferra</p>
+              <p class="pb_font-15"><a href="mailto:bteferra@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/brooke-teferra-0a6337125/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
         </div>
         <div class="row">
           <div class="col-sm-6 col-md-3">
-              <div class="pb_pricing_v1 p-5 border text-center bg-white">
-                <h4 class="mb-3"><br/>Discussions</h4>
-                <img class="img-fluid rounded-circle" src="<%=require('./images/cherry.jpg')%>" alt="Photograph of Cherry Zou">
-                <p class="pb_font-15 mt-3 mb-0">Cherry Zou</p>
-                <p class="pb_font-15"><a href="mailto:cherryz@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/cherryzou/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-              </div>
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Education Outreach</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/sara.jpg')%>" alt="Photograph of Sara Frigui">
+              <p class="pb_font-15 mt-3 mb-0">Sara Frigui</p>
+              <p class="pb_font-15"><a href="mailto:sfrig01@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sara-frigui-840193152/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
-            <div class="col-sm-6 col-md-3">
-              <div class="pb_pricing_v1 p-5 border text-center bg-white">
-                <h4 class="mb-3">Education Outreach</h4>
-                <img class="img-fluid rounded-circle" src="<%=require('./images/sara.jpg')%>" alt="Photograph of Sara Frigui">
-                <p class="pb_font-15 mt-3 mb-0">Sara Frigui</p>
-                <p class="pb_font-15"><a href="mailto:sfrig01@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sara-frigui-840193152/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-              </div>
-            </div>
+          </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education Outreach</h4>
