--- a/src/index.html
+++ b/src/index.html
@@ -397,6 +397,14 @@
               <p class="pb_font-15"><a href="mailto:ksinghal@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/trafficke/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Impact<br/>Lab</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/marissa.jpg')%>" alt="Photograph of Marissa Gerchick">
+              <p class="pb_font-15 mt-3 mb-0">Marissa Gerchick</p>
+              <p class="pb_font-15"><a href="mailto:gerchick@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/marissa-gerchick/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -524,7 +532,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <p class="pb_font-14">&copy; 2018 CS+Social Good.</p>
+            <p class="pb_font-14">&copy; 2019 CS+Social Good.</p>
           </div>
         </div>
       </div>
