--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,7 @@
         <div class="row">
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>President</h4>
+							<h4 class="mb-3">President</h4>
 							<img class="img-fluid rounded-circle" src="<%=require('./images/brooke.jpg')%>" alt="Photograph of Brooke Teferra">
 							<p class="pb_font-15 mt-3 mb-0">Brooke Teferra</p>
 							<p class="pb_font-15"><a href="mailto:bteferra@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/brooke-teferra-0a6337125/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -297,7 +297,7 @@
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Social Chair</h4>
+							<h4 class="mb-3">Social Chair</h4>
 							<img class="img-fluid rounded-circle" src="<%=require('./images/yujin.jpg')%>" alt="Photograph of Yu Jin Lee">
 							<p class="pb_font-15 mt-3 mb-0">Yu Jin Lee</p>
 							<p class="pb_font-15"><a href="mailto:yujin512@stanford.edu"><i class="fa fa-envelope"></i></a></p>
@@ -316,7 +316,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Discussions</h4>
+              <h4 class="mb-3">Discussions</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/briana.jpg')%>" alt="Photograph of Briana Berger">
               <p class="pb_font-15 mt-3 mb-0">Briana Berger</p>
               <p class="pb_font-15"><a href="mailto:brianamb@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/brianaberger/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -324,7 +324,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Fellowships</h4>
+              <h4 class="mb-3">Fellowships</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/ethan.jpg')%>" alt="Photograph of Ethan Oro">
               <p class="pb_font-15 mt-3 mb-0">Ethan Oro</p>
               <p class="pb_font-15"><a href="mailto:eoro@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ethan-oro" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -332,7 +332,7 @@
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Fellowships</h4>
+							<h4 class="mb-3">Fellowships</h4>
 							<img class="img-fluid rounded-circle" src="<%=require('./images/kim.jpg')%>" alt="Photograph of Kim Ngo">
 							<p class="pb_font-15 mt-3 mb-0">Kim Ngo</p>
 							<p class="pb_font-15"><a href="mailto:kimanh@stanford.edu"><i class="fa fa-envelope"></i></a></p>
@@ -342,7 +342,7 @@
         <div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>CS106S</h4>
+              <h4 class="mb-3">CS106S</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
               <p class="pb_font-15 mt-3 mb-0">Andy Jin</p>
               <p class="pb_font-15"><a href="mailto:andyjin@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andygjin/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -376,7 +376,7 @@
 				<div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Studio</h4>
+              <h4 class="mb-3">Studio</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/jose.jpg')%>" alt="Photograph of Jose Giron">
               <p class="pb_font-15 mt-3 mb-0">Jose Giron</p>
               <p class="pb_font-15"><a href="mailto:jmgiron@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jose-giron-8a8a1416a/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -384,7 +384,7 @@
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Studio</h4>
+							<h4 class="mb-3">Studio</h4>
 							<img class="img-fluid rounded-circle" src="<%=require('./images/saj.jpg')%>" alt="Photograph of Sajana Weerawardhena">
 							<p class="pb_font-13 mt-3 mb-0">Sajana Weerawardhena</p>
 							<p class="pb_font-15"><a href="mailto:sajana@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sajana-weerawardhena-621a57127/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
