--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,10 @@
           <div class="col-md-6">
             <h2 class="heading mb-3">Stanford CS+Social Good</h2>
             <div class="sub-heading">
-              <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p> <p> <a href="http://bit.ly/cssg2019" target="_blank" id="apply-link">Apply to join our team today!</a> </p>
-              <p class="mb-5">
+              <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
+<!--              <p> <a href="http://bit.ly/cssg2019" target="_blank" id="apply-link">Apply to join our team today!</a> </p>-->
+							<p class="mb-4"><a href="https://bit.ly/cssgEOY1819" target="_blank" id="past-work">Look at Our Past Work</a></p>
+							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://www.facebook.com/cs4good/" target="_blank"><i class="fa fa-facebook"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://mailman.stanford.edu/mailman/listinfo/cs-for-social-good" target="_blank"><i class="fa fa-envelope"></i></span></a>
@@ -325,17 +327,17 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Fellowships</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/ethan.jpg')%>" alt="Photograph of Ethan Oro">
-              <p class="pb_font-15 mt-3 mb-0">Ethan Oro</p>
-              <p class="pb_font-15"><a href="mailto:eoro@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ethan-oro" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/priya.jpg')%>" alt="Photograph of Priya Chatwani">
+              <p class="pb_font-15 mt-3 mb-0">Priya Chatwani</p>
+              <p class="pb_font-15"><a href="mailto:priyac5@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/priya-chatwani" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>Fellowships</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/kim.jpg')%>" alt="Photograph of Kim Ngo">
-							<p class="pb_font-15 mt-3 mb-0">Kim Ngo</p>
-							<p class="pb_font-15"><a href="mailto:kimanh@stanford.edu"><i class="fa fa-envelope"></i></a></p>
+							<img class="img-fluid rounded-circle" src="<%=require('./images/julia.jpg')%>" alt="Photograph of Julia Meltzer">
+							<p class="pb_font-15 mt-3 mb-0">Julia Meltzer</p>
+							<p class="pb_font-15"><a href="mailto:jnmeltzer@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/julia-meltzer-45545a173" target="_blank"><i class="fa fa-linkedin"></i></a></p>
 						</div>
 					</div>
         </div>
