--- a/src/index.html
+++ b/src/index.html
@@ -361,9 +361,9 @@
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3">Impact<br/>Lab</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/krishna.jpg')%>" alt="Photograph of Krishna	Gorrepati">
-							<p class="pb_font-15 mt-3 mb-0">Krishna	Gorrepati</p>
-							<p class="pb_font-15"><a href="mailto:krishg@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="Krishna Gorrepati" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+							<img class="img-fluid rounded-circle" src="<%=require('./images/vikas.jpg')%>" alt="Photograph of Vikas Maturi">
+							<p class="pb_font-15 mt-3 mb-0">Vikas Maturi</p>
+							<p class="pb_font-15"><a href="mailto:vmaturi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/vikas-maturi-16108248/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-3">
