added fellowship apply link

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
             <h2 class="heading mb-3">Stanford CS+Social Good</h2>
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
-<!--              <p> <a href="http://bit.ly/cssg2019" target="_blank" id="apply-link">Apply to join our team today!</a> </p>-->
+                            <p> <a href="https://solo.stanford.edu/opportunities/cssocial-good-summer-fellowship-2020" target="_blank" id="apply-link">Apply for a CS+SG fellowship today!</a> </p>
+              <!--              <p> <a href="http://bit.ly/cssg2019" target="_blank" id="apply-link">Apply to join our team today!</a> </p>-->
 							<p class="mb-4"><a href="https://bit.ly/cssgEOY1819" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
